--- a/css/index.css
+++ b/css/index.css
@@ -41,3 +41,23 @@
 .table.is-hcentered {
   margin: auto;
 }
+
+.image-pop {
+  background: white;
+  border: 5px solid white;
+  border-radius: 50%;
+  box-sizing: content-box;
+  box-shadow: 0px 0px 10px 10px white;
+}
+
+.is-relative-root {
+  position: relative;
+}
+
+.corner-icon.is-top-right {
+  left: 100%;
+  top: 0;
+  width: 100px;
+  position: absolute;
+  transform: translate(-100%, -50%);
+}
