Add Genius Kids information

--- a/css/index.css
+++ b/css/index.css
@@ -74,3 +74,19 @@
 .is-hover-brighten:hover {
 	opacity: 1;
 }
+
+.is-unchosen .is-different {
+	display: none;
+}
+
+.is-unchosen .nurture, .is-genius .nurture {
+	display: none;
+}
+
+.is-unchosen .genius, .is-nurture .genius {
+	display: none;
+}
+
+p + p {
+	margin-top: 0.8em;
+}
